--- a/uploaded_files.css
+++ b/uploaded_files.css
@@ -36,29 +36,49 @@ footer{
     width: 270px;
     height: 270px;
     vertical-align: top;
-    padding: 0.4em;
+    padding: 0.2em;
     margin-left: 0.2rem;
     text-align: left;
     font-size: 20px;
     border: 2px solid #4caf50;
     border-radius: 20px;
     margin-top: 0.2rem;
-    background: url("music.png") center center no-repeat;
+    background: url("file_generic.png") center center no-repeat;
+}
+
+.file-header{
+    height:32px;
+    width: 100%;
+    position: relative;
 }
 
 .file-number{
     font-size: 1.2em;
     font-weight: bold;
     color: #4CAF50;
-    padding: 1em 1em 1em 0;
+    left: 6px;
+    position: absolute;
 }
 
-.file-icon{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    vertical-align: middle;
+.file-name{
+    left: 34px;
+    position: absolute;
+    color: #4caf50;
+    text-decoration: none;
+    font-size: 1.2em;
+    font-weight: lighter;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 200px;
+    height: 32px;
+    white-space: nowrap;
+}
 
+.file-delete{
+    width: 30px;
+    height: 30px;
+    right: 6px;
+    position: absolute;
 }
 
 .copyright-text{
@@ -72,7 +92,6 @@ footer{
     background-color: #4CAF50;
     height: 2rem;
     width: 100%;
-    /*position:absolute;*/
     bottom: 3rem;
 }
 
