--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -1,5 +1,10 @@
 .App {
   text-align: center;
+
+  user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -webkit-user-select: none;
 }
 
 .Toolbar{
@@ -12,7 +17,7 @@
 }
 
 header{
-  width: 100%;
+  width: 100vw;
   height: 6rem;
   font-size: 20px;
   color: lightblue;
@@ -22,15 +27,32 @@ header{
 }
 
 h2{
-  margin: 0;
-  width: 100vw;
+  margin: auto;
 }
 
-.SymbolDescription{
+h2:hover{
+  cursor: default;
+}
+
+h6:hover{
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.LeftHeaderContent{
   position: absolute;
   top: 0;
   bottom: 0;
   left: 14px;
+  margin: auto;
+  height: 3em;
+}
+
+.RightHeaderContent{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 24px;
   margin: auto;
   height: 3em;
 }
@@ -78,23 +100,28 @@ footer{
 
 .file{
   background-color: #3c5775;
+  background-size: 100% 100%;
   display: inline-block;
   width: 270px;
   height: 270px;
-  vertical-align: top;
+  vertical-align: middle;
   padding: 0.2em;
   margin-left: 0.5rem;
-  text-align: left;
+  text-align: center;
   font-size: 20px;
   border: 2px solid lightblue;
   border-radius: 12px;
   margin-top: 0.5rem;
   position: relative;
   overflow: hidden;
+  color: lightblue;
 }
 
 .file:hover{
   border: 2px solid white;
+  /*-webkit-filter: opacity(.2);*/
+  /*filter: opacity(.2);*/
+  color: #FFF;
 }
 
 @keyframes fadein {
@@ -166,4 +193,16 @@ input{
 .example-leave.example-leave-active {
   opacity: 0;
   transition: 1s;
+}
+
+@media screen and (max-width: 1150px) {
+  h2{
+    max-width: 50vw;
+  }
+}
+
+@media screen and (max-width: 770px) {
+  h2{
+    display: none;
+  }
 }
