--- a/src/components/FileSystemEntryGrid.css
+++ b/src/components/FileSystemEntryGrid.css
@@ -1,23 +1,15 @@
-.file-section-container{
-    background-color: #3c5775;
-    background-image: url("../images/batthern.png");
-}
-
-.file-section{
-    padding: 0px 0 40px 0;
-    max-width: 1200px;
-    text-align: center;
-    margin: auto;
-}
-
 .file{
-    background-color: #3c5775;
-    background-size: 100% 100%;
+    /*background-color: #3c5775;*/
+    background-color: #000;
+    background-size: 280px 220px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-origin: content-box;
     display: inline-block;
     width: 270px;
     height: 270px;
     vertical-align: middle;
-    padding: 0.2em;
+    /*padding: 0.2em;*/
     margin-left: 0.5rem;
     text-align: center;
     font-size: 20px;
@@ -34,35 +26,45 @@
     margin: auto;
     display: block;
     width: 100%;
-    bottom: 6px;
+    bottom: 3px;
+}
+
+.entry-filename{
+    position: absolute;
+    margin: auto;
+    display: block;
+    width: 100%;
+    top: 3px;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .entry-overlay{
     position: absolute;
-    width: 140px;
+    width: 100%;
     height: 140px;
-    top: 30px;
-    left: 30px;
-    opacity: 0.7;
-    background-color: lightblue;
-    padding: 40px;
+    top: 25px;
+    background-color: #FFF;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    opacity: 0;
 }
 
-.entry-overlay:hover{
-    opacity: 0;
+.file:hover .entry-overlay{
+    opacity: 0.2;
 }
 
 .file:hover{
     border: 2px solid white;
     color: #FFF;
-    background-color: #3c578F;
+    background-color: #080808;
 }
 
 a img{
     width: 1rem;
     height: 0.8rem;
     position: absolute;
-    bottom: 12px;
+    bottom: 8px;
     right: 70px;
 }
 
